Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29005

Problem writing "{" character on code editor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 5.0.0, 5.0.1
    • None
    • MAC OSX Mountain Lion 10.8.2

      Mac 10.7
    • Change-Id: I2fb073b4dc7291f909cce616f40f7c2491e7cf26

      On code editor, the character "{" can't be written. Just nothing happened when press this key. No problem with others one.
      I haven't problem writting this character on another application, even in QTCreater 2.5.0 it works fine.
      The problem is with 2.6.1 version.
      Thanks in advance.

      Gaston

        For Gerrit Dashboard: QTBUG-29005
        # Subject Branch Project Status CR V

            paeglis Gatis Paeglis
            ipotex Ipotex Tercedo
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes